--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "cross-env": "7.0.3",
     "eslint": "8.14.0",
     "jest": "28.1.0",
+    "nodemon": "^2.0.22",
     "supertest": "6.2.3"
   },
   "dependencies": {
+    "express": "^4.18.2",
     "sqlite3": "^5.0.8"
   }
 }
